<resources>
    <string name="app_name">DogApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dog_name_title">Dog Name</string>
    <string name="bred_for_title">bred_for</string>
    <string name="bred_group_title">Bred Group</string>
    <string name="country_code_title">Country Code</string>
    <string name="life_span_title">Life Span</string>
    <string name="temperament_title">Temperament</string>
    <string name="dog_img_description">TODO</string>
</resources>