<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailFragment">

    <ImageView
        android:id="@+id/iv_dog"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/dog_img_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_dog_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/dog_name_title"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_dog" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="56dp"
        app:layout_constraintTop_toBottomOf="@id/tv_dog_name"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/bred_for_container"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_bred_for_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bred_for_title"/>
            <TextView
                android:id="@+id/tv_bred_for"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bred_for_title"
                android:textColor="@color/black"
                android:textSize="22sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bred_group_container"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_bred_group_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bred_group_title"/>

            <TextView
                android:id="@+id/tv_bred_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bred_group_title"
                android:textColor="@color/black"
                android:textSize="22sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/country_code_container"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_country_code_title"
                android:text="@string/country_code_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_country_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country_code_title"
                android:textColor="@color/black"
                android:textSize="22sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/life_span_container"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_life_span_title"
                android:text="@string/life_span_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_life_span"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/life_span_title"
                android:textColor="@color/black"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/temperament_container"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_temperament_title"
                android:text="@string/temperament_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_temperament"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperament_title"
                android:textColor="@color/black"
                android:textSize="22sp"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>